clang/test/BSC/Negative/Parser/detect_eof/detect_eof_union_1.cbs
// RUN: %clang_cc1 -fsyntax-only -verify %s

[union // expected-error {{expected expression}}
// expected-error {{expected identifier or '('}}